# magia-sdk

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  gvtest.yaml  pyproject.toml  requirements.txt  testset.cfg
drivers/eventunit/: CMakeLists.txt
drivers/eventunit/include/: eventunit.h
drivers/eventunit/src/: eventunit.c
drivers/fsync32/: CMakeLists.txt
drivers/fsync32/include/: fsync32.h
drivers/fsync32/src/: fsync32.c
drivers/idma32/: CMakeLists.txt
drivers/idma32/include/: idma32.h
drivers/idma32/src/: idma32.c
drivers/redmule16/: CMakeLists.txt
drivers/redmule16/include/: redmule16.h
drivers/redmule16/src/: redmule16.c
hal/: CMakeLists.txt
hal/include/: eventunit.h  fsync.h  idma.h  redmule.h
hal/src/: eventunit.c  fsync.c  idma.c  redmule.c
kernels/: CMakeLists.txt
kernels/Generic/: CMakeLists.txt
kernels/Generic/include/: add.h  log.h
kernels/Generic/src/: add_f16.c  log_f16.c
kernels/RedMulE/: CMakeLists.txt
kernels/RedMulE/include/: redmule_kernels.h
kernels/RedMulE/src/: redmule_kernels.c
kernels/include/: add.h
kernels/src/: add.c
mglib/: CMakeLists.txt
mglib/include/: mg_event.h  mg_idma.h  mg_redmule.h
mglib/src/: mg_idma.c  mg_redmule.c
scripts/gvsoc2perfetto-rs/: Cargo.toml
scripts/gvsoc2perfetto-rs/src/: main.rs
targets/: CMakeLists.txt
targets/magia/: CMakeLists.txt  link.ld
targets/magia/include/: tile.h
targets/magia/include/addr_map/: tile_addr_map.h
targets/magia/include/regs/: tile_ctrl.h
targets/magia/include/utils/: amo_utils.h  attention_utils.h  eu_isa_utils.h  fsync_isa_utils.h  idma_isa_utils.h  io.h  magia_sentinel_utils.h  magia_tile_utils.h  magia_utils.h  performance_utils.h  prf.h  printf.h  redmule_isa_utils.h  tinyprintf.h
targets/magia/src/: crt0.S
targets/magia_v1/: CMakeLists.txt  link.ld
targets/magia_v1/include/: tile.h
targets/magia_v1/include/addr_map/: tile_addr_map.h
targets/magia_v1/include/regs/: tile_ctrl.h
targets/magia_v1/include/utils/: amo_utils.h  attention_utils.h  eu_isa_utils.h  fsync_isa_utils.h  idma_isa_utils.h  io.h  magia_utils.h  nsync_utils.h  performance_utils.h  printf.h  redmule_isa_utils.h  tinyprintf.h
targets/magia_v1/spatz/src/: spatz_crt0.S
targets/magia_v1/src/: io.c
targets/magia_v2/: CMakeLists.txt  config.cmake  link.ld
targets/magia_v2/include/: tile.h
targets/magia_v2/include/addr_map/: tile_addr_map.h
targets/magia_v2/include/regs/: tile_ctrl.h
targets/magia_v2/include/utils/: .performance_utils.h.swp  alloc.h  amo_utils.h  attention_utils.h  compare_utils.h  eu_isa_utils.h  event_unit_utils.h  fsync_isa_utils.h  gemm_utils.h  idma_isa_utils.h  idma_mm_utils.h  io.h  l1_fifo.h  magia_spatz_utils.h  magia_tile_utils.h  magia_utils.h  maps_utils.h  performance_utils.h  prf.h  printf_wrapper.h  redmule_isa_utils.h  redmule_mm_utils.h  spatz_perf_counters.h  tinyprintf.h
targets/magia_v2/spatz/bootrom/: spatz_init.S  spatz_init.ld
targets/magia_v2/spatz/src/: spatz_crt0.S  spatz_program.ld
targets/magia_v2/src/: alloc.c  crt0.S  io.c
targets/magia_v3/: CMakeLists.txt  link.ld
targets/magia_v3/include/: tile.h
targets/magia_v3/include/addr_map/: tile_addr_map.h
targets/magia_v3/include/regs/: tile_ctrl.h
targets/magia_v3/include/utils/: amo_utils.h  attention_utils.h  eu_isa_utils.h  io.h  magia_pulp_utils.h  magia_spatz_utils.h  magia_utils.h  performance_utils.h  prf.h  printf.h  redmule_isa_utils.h  typedefs.h
targets/magia_v3/pulp/src/: pulp_crt0.S  pulp_program.ld
targets/magia_v3/spatz/src/: spatz_program.ld
targets/magia_v3/src/: crt0.S  io.c
targets/pulp/: link.ld
targets/pulp/include/: tile.h
targets/pulp/include/addr_map/: tile_addr_map.h
targets/pulp/include/regs/: tile_ctrl.h
targets/pulp/include/utils/: magia_utils.h  printf.h
targets/pulp/src/: crt0.S
tests/magia/mesh/: CMakeLists.txt
tests/magia/mesh/adder/: CMakeLists.txt
tests/magia/mesh/alloc/: CMakeLists.txt
tests/magia/mesh/allreduce_fs/: CMakeLists.txt
tests/magia/mesh/allreduce_noc/: CMakeLists.txt
tests/magia/mesh/amo/: CMakeLists.txt
tests/magia/mesh/amo_lock/: CMakeLists.txt
tests/magia/mesh/amo_lock_column/: CMakeLists.txt
tests/magia/mesh/amo_lock_global/: CMakeLists.txt
tests/spatz_on_magia/: CMakeLists.txt
tests/spatz_on_magia/common/: compare_utils.h
tests/spatz_on_magia/double_task/: CMakeLists.txt  main.c
tests/spatz_on_magia/fft_fs/: CMakeLists.txt  main.c
tests/spatz_on_magia/hello_spatz/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_add/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_averagepool/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_batchnorm/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_ceil/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_clip/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_div/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_exp/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_floor/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_gelu/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_gemm/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_globalaveragepool/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_globalmaxpool/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_groupnorm/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_hardsigmoid/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_hardswish/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_instancenorm/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_layernorm/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_maxpool/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_relu/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_sigmoid/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_softmax/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_sub/: CMakeLists.txt  main.c
tests/spatz_on_magia/onnx_swish/: CMakeLists.txt  main.c
tests/spatz_on_magia/pouya_spatz_csr/: CMakeLists.txt  main.c
tests/spatz_on_magia/pouya_spatz_gemv/: CMakeLists.txt  main.c
(+514 files in other folders)
