[build-system]
requires = ["setuptools>=61", "setuptools<81"]
build-backend = "setuptools.build_meta"

[project]
name = "magia-sdk"
version = "0.1.0"
description = "SDK for the MAGIA mesh-based heterogeneous RISC-V platform"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "prettytable",
    "pyelftools>=0.24",
    "argparse>=1.4",
    "pexpect",
    "lz4",
    "pycryptodome",
    "rich",
    "psutil",
    "six",
    "typing_extensions",
    "deeploy-pulp",
]

[tool.setuptools.packages.find]
where = ["."]
