add_subdirectory(hello_spatz)

add_subdirectory(onnx_add)
add_subdirectory(onnx_averagepool)
add_subdirectory(onnx_batchnorm)
add_subdirectory(onnx_ceil)
add_subdirectory(onnx_clip)
add_subdirectory(onnx_div)
add_subdirectory(onnx_exp)
add_subdirectory(onnx_floor)
add_subdirectory(onnx_gelu)
add_subdirectory(onnx_layernorm)
add_subdirectory(onnx_maxpool)
add_subdirectory(onnx_relu)
add_subdirectory(onnx_sigmoid)
add_subdirectory(onnx_softmax)
add_subdirectory(onnx_sub)
