# Copyright 2025 University of Bologna.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0
#
# Alberto Dequino <alberto.dequino@unibo.it>

add_subdirectory(mesh_test)
add_subdirectory(hello_world)
add_subdirectory(fsync_levels)
add_subdirectory(fsync_rc)
add_subdirectory(fsync_diag)
add_subdirectory(fsync_sync)
add_subdirectory(mm_is)
add_subdirectory(mm_ws)