# Copyright 2025 University of Bologna.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0
#
# Alberto Dequino <alberto.dequino@unibo.it>
add_subdirectory(hello_world)
add_subdirectory(fsync_levels)
add_subdirectory(fsync_rc)
add_subdirectory(fsync_diag)
add_subdirectory(fsync_sync)
add_subdirectory(mm_is)
add_subdirectory(mm_ws)
add_subdirectory(mm_os)
add_subdirectory(idma_2d)
add_subdirectory(idma_1d)
# #add_subdirectory(flatatt)
# add_subdirectory(amo)
# add_subdirectory(float)
add_subdirectory(cemm_global)
# add_subdirectory(mm_is_nb)
# add_subdirectory(mm_ws_nb)
add_subdirectory(mm_is_2)
add_subdirectory(mm_os_2)
add_subdirectory(mm_ws_2)
add_subdirectory(brah)
add_subdirectory(fsync_lr)
add_subdirectory(gemv)